# ishell

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  openssh.rs  pool.rs  process_monitor.rs  russh_transport.rs  ssh.rs  store.rs  tail_monitor.rs  terminal.rs  time.rs
src/api/: tauri.ts
src/components/: CommandHistoryPanel.tsx  ConnectionManager.tsx  DownloadQueue.tsx  ServerDetail.tsx  ServerEditor.tsx  SettingsModal.tsx  SftpBrowser.tsx  Sidebar.tsx  StatusDashboard.tsx  TabBar.tsx  TailViewer.tsx  TerminalPane.tsx  UploadQueue.tsx
src/constants/: tail.ts  theme.ts
src/features/shell/: types.ts
src/mocks/: demoData.ts
src/styles/: base.css  controls.css  layout.css  modules.css  theme-glass.css
src/utils/: format.ts  servers.ts
