[package]
name = "ishell"
version = "1.1.2"
description = "A lightweight SSH and SFTP manager"
authors = ["iShell"]
license = "MIT"
repository = "https://github.com/Raymanhan/ishell"
edition = "2021"

[lib]
name = "ishell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
# Local encrypted storage: SQLite (bundled, no system dependency) + AES-256-GCM.
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
getrandom = "0.2"
zip = "2"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Pure-Rust SSH transport. Pulled in unconditionally on Windows (see the
# [target.'cfg(windows)'.dependencies] section below); optional elsewhere so the
# Windows code path can be compile-tested on any host via `--features force-russh`.
russh = { version = "0.61", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "sync", "time"], optional = true }

[features]
# Force the russh transport on a non-Windows host (for development/testing).
force-russh = ["dep:russh", "dep:tokio"]

# On Windows the russh transport is the only option, so it is always compiled in.
[target.'cfg(windows)'.dependencies]
russh = "0.61"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "sync", "time"] }
